Minor bugfixes found by findbugs